--- a/Etapa01/Apenas Exercícios/Modelo03/index.html
+++ b/Etapa01/Apenas Exercícios/Modelo03/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>Contador</h1>
     </header>
     <section>
-        <div>
-
+        <div id="dados">
+            <P>Início: <input type="number" name="início" id="txti"></P>
+            <p>Fim: <input type="number" name="fim" id="txtf"></p>
+            <p>Passo: <input type="number" name="passo" id="txtp"></p>
+            <p><input class="button" type="button" value="Contar" onclick="contar()"></p>    
         </div>
-        <div>
+        <div id="resultado">
 
         </div>
     </section>
